--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "formik": "^2.4.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-select": "^5.7.4",
     "yup": "^1.2.0"
   },
   "devDependencies": {
